Can configure field ids for csv files

--- a/Last.fm-Scrubbler-WPF/App.config
+++ b/Last.fm-Scrubbler-WPF/App.config
@@ -16,6 +16,18 @@
       <setting name="AutoConnect" serializeAs="String">
         <value>False</value>
       </setting>
+      <setting name="ArtistFieldIndex" serializeAs="String">
+        <value>0</value>
+      </setting>
+      <setting name="AlbumFieldIndex" serializeAs="String">
+        <value>1</value>
+      </setting>
+      <setting name="TrackFieldIndex" serializeAs="String">
+        <value>2</value>
+      </setting>
+      <setting name="TimestampFieldIndex" serializeAs="String">
+        <value>3</value>
+      </setting>
     </Last.fm_Scrubbler_WPF.Properties.Settings>
   </userSettings>
   <system.net>
