Added album artist and duration to CSVScrobbler/Downloader

--- a/Last.fm-Scrubbler-WPF/App.config
+++ b/Last.fm-Scrubbler-WPF/App.config
@@ -28,6 +28,12 @@
       <setting name="TimestampFieldIndex" serializeAs="String">
         <value>3</value>
       </setting>
+      <setting name="AlbumArtistFieldIndex" serializeAs="String">
+        <value>4</value>
+      </setting>
+      <setting name="DurationFieldIndex" serializeAs="String">
+        <value>5</value>
+      </setting>
     </Last.fm_Scrubbler_WPF.Properties.Settings>
   </userSettings>
   <system.net>
