--- a/Last.fm-Scrubbler-WPF/packages.config
+++ b/Last.fm-Scrubbler-WPF/packages.config
@@ -3,6 +3,7 @@
   <package id="Extended.Wpf.Toolkit" version="3.0" targetFramework="net452" />
   <package id="Inflatable.Lastfm" version="1.0.1.307" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net452" />
+  <package id="SpotifyAPI-NET" version="2.15.1" targetFramework="net452" />
   <package id="System.Net.Http" version="4.3.2" targetFramework="net452" />
   <package id="taglib" version="2.1.0.0" targetFramework="net452" />
 </packages>
