Finished basic Spotify implementation

--- a/Last.fm-Scrubbler-WPF/App.config
+++ b/Last.fm-Scrubbler-WPF/App.config
@@ -13,7 +13,7 @@
       <setting name="Username" serializeAs="String">
         <value />
       </setting>
-      <setting name="AutoConnect" serializeAs="String">
+      <setting name="ITunesAutoConnect" serializeAs="String">
         <value>False</value>
       </setting>
       <setting name="ArtistFieldIndex" serializeAs="String">
@@ -33,6 +33,9 @@
       </setting>
       <setting name="DurationFieldIndex" serializeAs="String">
         <value>5</value>
+      </setting>
+      <setting name="SpotifyAutoConnect" serializeAs="String">
+        <value>False</value>
       </setting>
     </Last.fm_Scrubbler_WPF.Properties.Settings>
   </userSettings>
