Add CacheScrobbler (kinda wip)

--- a/Last.fm-Scrubbler-WPF/App.config
+++ b/Last.fm-Scrubbler-WPF/App.config
@@ -37,6 +37,9 @@
       <setting name="SpotifyAutoConnect" serializeAs="String">
         <value>False</value>
       </setting>
+      <setting name="AutoScrobbleCache" serializeAs="String">
+        <value>True</value>
+      </setting>
     </Last.fm_Scrubbler_WPF.Properties.Settings>
   </userSettings>
   <system.net>
