--- a/Last.fm-Scrubbler-WPF/Properties/Settings.settings
+++ b/Last.fm-Scrubbler-WPF/Properties/Settings.settings
@@ -29,5 +29,8 @@
     <Setting Name="SpotifyAutoConnect" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
     </Setting>
+    <Setting Name="AutoScrobbleCache" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">True</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
