Make csv delimiters, duration and album artist field index configureable

--- a/Last.fm-Scrubbler-WPF/App.config
+++ b/Last.fm-Scrubbler-WPF/App.config
@@ -40,6 +40,9 @@
       <setting name="AutoScrobbleCache" serializeAs="String">
         <value>True</value>
       </setting>
+      <setting name="CSVDelimiters" serializeAs="String">
+        <value>,</value>
+      </setting>
     </Last.fm_Scrubbler_WPF.Properties.Settings>
   </userSettings>
   <system.net>
