--- a/Last.fm-Scrubbler-WPF/Properties/Settings.settings
+++ b/Last.fm-Scrubbler-WPF/Properties/Settings.settings
@@ -32,5 +32,8 @@
     <Setting Name="AutoScrobbleCache" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">True</Value>
     </Setting>
+    <Setting Name="CSVDelimiters" Type="System.String" Scope="User">
+      <Value Profile="(Default)">,</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
